FUNI logo Links

--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -13,7 +13,7 @@
         <a href="">Sign Up</a>
         <a href="">Log In</a>
     </nav>
-    <a href="" id="FUNI-logo"><img src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+    <a href="../HomePage/index.html" id="FUNI-logo"><img src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
     <div class="grid-container">
         <h2>
             ABOUT US
