--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -21,7 +21,7 @@
             </li>
         </ul>
     </nav>
-    <a href="" id="FUNI-logo"><img src="" alt="FUNI logo"></a>
+    <a href="../HomePage/index.html" id="FUNI-logo"><img src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
     <h1>
         Finance Calculator
     </h1>
@@ -44,7 +44,7 @@
                     <h2>Calendar</h2>
                 </a>
             </div>
-            
+
         </div>
     </div>
 </body>
