--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <nav>
-        <a href="">Sign Up</a>
-        <a href="">Log In</a>
+        <a href="../User Login-Registration/register.html">Sign Up</a>
+        <a href="../User Login-Registration/login.html">Log In</a>
     </nav>
     <a href="../HomePage/index.html" id="FUNI-logo"><img src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
     <div class="grid-container">
