--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -39,7 +39,7 @@
                 </a>
             </div>
             <div class="grid-item-3">
-                <a href="">
+                <a href="../Calendar/calendar.html">
                     <img src="" alt="Calendar">
                     <h2>Calendar</h2>
                 </a>
