--- a/User Login-Registration/register.html
+++ b/User Login-Registration/register.html
@@ -1,59 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>REGISTER</title>
-        <link rel="stylesheet" href="log-reg.css">
-    </head>
-    <body>
-        <nav>
-            <a href="../HomePage/index.html" id="FUNI-logo"><h1>FUNI</h1><img
-                    src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
-            <div class="nav-links">
-                <a href="../User Login-Registration/register.html">Sign Up</a>
-                <a href="../User Login-Registration/login.html">Log
-                    In</a>
-            </div>
-        </nav>
-        <form action="action.php" method="post" id="registration-form">
-            <div class="register-background">
-                <label for="user-name">Username</label>
-                <input type="text" placeholder="Enter Username" name="username"
-                    minlength="8" pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).*$"
-                    title="Username must have at least one uppercase letter, one number, and no spaces."
-                    required>
-                <label for="pass">Password</label>
-                <input type="password" placeholder="Enter Password"
-                    id="password" name="password" minlength="8" maxlength="24"
-                    pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).{8,24}$"
-                    title="Password must be between 8-24 characters, containing at least one uppercase letter, one number, and no spaces."
-                    required>
-                <label for="confirm-pass">Confirm Password</label>
-                <input type="password" placeholder="Confirm Password"
-                    id="confirm-password" name="confirm-password" required>
-                <label for="Email">Email</label>
-                <input type="email" placeholder="Enter Email Address"
-                    name="email" required>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="log-reg.css">
+</head>
+<body>
+    <nav>
+        <a href="../HomePage/index.html" id="FUNI-logo">
+            <h1>FUNI</h1>
+            <img src="../images/IMG_0049.jpg" alt="FUNI logo">
+        </a>
+        <div class="nav-links">
+            <a href="../User Login-Registration/register.html">Sign Up</a>
+            <a href="../User Login-Registration/login.html">Log In</a>
+        </div>
+    </nav>
+    <div>
+        <form autocomplete="off" action="action.php" method="post" id="registration-form">
+            <div class="registration-signup">
+                <h2>Create an Account</h2>
+                <div class="username-signup">
+                    <input type="text" placeholder="ex. (Johndoe)" id="username"
+                        name="username" minlength="8"
+                        pattern="^(?=.*[A-Z])(?!.*\s).*$"
+                        title="Username must have at least one uppercase letter, and no spaces."
+                        spellcheck="false"
+                        required>
+                    <label for="username">Username</label>
+                </div>
+                <div class="email">
+                    <input type="email" placeholder=" "
+                        name="email" required>
+                    <label for="Email">Email</label>
+                </div>
+                <div class="password-signup">
+                    <input type="password" placeholder="(ex. 'Brownfox1')" id="password"
+                        name="psw" minlength="8" maxlength="24"
+                        pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).{8,24}$"
+                        title="Password must be between 8-24 characters, containing at least one uppercase letter, one number, and no spaces."
+                        required>
+                    <label for="psw">Password</label>
+                </div>
+                <div class="confirm-password">
+                    <input type="password" placeholder=" "
+                        id="confirm-password"
+                        name="confirm-psw" minlength="8" maxlength="24"
+                        pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).{8,24}$"
+                        required>
+                    <label for="confirm-psw">Confirm Password</label>
+                </div>
+                <p>Have an account?&#160<a
+                    href="../User Login-Registration/login.html"
+                    class="login-acc">Click here to sign in!</a></p>
                 <button class="signup-button" type="submit">Register</button>
             </div>
         </form>
+    </div>
+    <script>
+    document.getElementById('registration-form').addEventListener('submit', function(event) {
+        var password = document.getElementById('password').value;
+        var confirmPassword = document.getElementById('confirm-password').value;
 
-        <script>
-        document.getElementById('registration-form').addEventListener('submit', function(event) {
-
-            var password = document.getElementById('password').value;
-
-            var confirmPassword = document.getElementById('confirm-password').value;
-
-            if (password !== confirmPassword) {
-
-                alert("Passwords do not match");
-
-                event.preventDefault();
-
-            }
-
-        });
+        if (password !== confirmPassword) {
+            alert("Passwords do not match");
+            event.preventDefault();
+        }
+    });
     </script>
-    </body>
+</body>
 </html>
