Main Page Update

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -44,6 +44,12 @@
                     <h2>Calendar</h2>
                 </a>
             </div>
+            <div class="grid-item-4">
+                <a href="">
+                    <img src="" alt="Goal Tracker">
+                    <h2>Goal Tracker</h2>
+                </a>
+            </div>
 
         </div>
     </div>
