--- a/User Login-Registration/register.html
+++ b/User Login-Registration/register.html
@@ -48,8 +48,10 @@
                         id="confirm-password"
                         name="confirm-psw" minlength="8" maxlength="24"
                         pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).{8,24}$"
-                        required>
+                        required
+                        oninput="CheckPasswordMatch()">
                     <label for="confirm-psw">Confirm Password</label>
+                    <p class="password-match-error" id="password-match-error" style="color: red; display: none;">Passwords Do Not Match</p>
                 </div>
                 <p>Have an account?&#160<a
                     href="../User Login-Registration/login.html"
@@ -59,15 +61,18 @@
         </form>
     </div>
     <script>
-    document.getElementById('registration-form').addEventListener('submit', function(event) {
-        var password = document.getElementById('password').value;
-        var confirmPassword = document.getElementById('confirm-password').value;
+        function CheckPasswordMatch() {
+            var password = document.getElementById('password').value;
+            var confirmPassword = document.getElementById('confirm-password').value;
+            var passwordMatchError = document.getElementById('password-match-error');
 
-        if (password !== confirmPassword) {
-            alert("Passwords do not match");
-            event.preventDefault();
+            if (password !== confirmPassword){
+                passwordMatchError.style.display = 'block';
+            } 
+            else{
+                passwordMatchError.style.display = 'none';
+            }
         }
-    });
     </script>
 </body>
 </html>
