--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -10,13 +10,14 @@
 
 <body>
     <nav>
-        <a href="../HomePage/index.html" id="FUNI-logo"><h1>FUNI</h1><img
-                src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+        <a href="../HomePage/index.html" id="FUNI-logo">
+            <h1>FUNI</h1><img src="../images/IMG_0049.jpg" alt="FUNI logo">
+        </a>
         <div class="nav-links">
-            <a href="../User Login-Registration/register.html">Sign Up</a>
-            <a href="../User Login-Registration/login.html">Log
-                In</a>
-        </div>
+            <a href="../Billing/billing_calculator.html">BUDGET
+                CALCULATOR</a>
+            <a href="../User Login-Registration/register.html">SIGN UP</a>
+            <a href="../User Login-Registration/login.html">LOG IN</a>
     </nav>
     <div class="grid-container">
         <h2>
