--- a/User Login-Registration/register.html
+++ b/User Login-Registration/register.html
@@ -21,7 +21,7 @@
     <div>
         <form autocomplete="off" action="action.php" method="post" id="registration-form">
             <div class="registration-signup">
-                <h2>Create an Account</h2>
+                <h2>Create an account</h2>
                 <div class="username-signup">
                     <input type="text" placeholder="ex. (Johndoe)" id="username"
                         name="username" minlength="8"
@@ -32,7 +32,7 @@
                     <label for="username">Username</label>
                 </div>
                 <div class="email">
-                    <input type="email" placeholder=" "
+                    <input type="email" placeholder="ex. (JohnDoe@gmail.com)"
                         name="email" required>
                     <label for="Email">Email</label>
                 </div>
