--- a/Billing/loan_calc.html
+++ b/Billing/loan_calc.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Separate Loan and Down Payment Calculator</title>
-    <style>
-  body { font-family: Arial, sans-serif; padding: 20px; }
-  label, input, button { margin-top: 10px; display: block; width: 300px; }
-  input, button { padding: 10px; }
-</style>
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Loan Calculator</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h2>Loan and Down Payment Calculator</h2>
+    <h2>Loan Calculator</h2>
     <form id="loanForm">
       <label for="amount">Loan Amount:</label>
       <input type="number" id="amount" required>
