--- a/GoalTracker/goal.html
+++ b/GoalTracker/goal.html
@@ -1,64 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Goal Tracker</title>
-        <link rel="stylesheet" href="styles.css">
-
-    </head>
-
-    <body>
-        <div>
-            <h1>Savings Goal Tracker</h1>
-
-            <br><br>
-
-            <form>
-
-                <label for="goal-amount">Current Goal: $</label>
-                <input type="number" class="currentgoal" id="currentgoal"
-                    name="currentgoal" required>
-
-                <br><br><br>
-
-                <label for="current-amount">Current Savings: $</label>
-                <input type="number" class="currentsavings" id="currentsavings"
-                    name="currentsavings" required>
-
-                <br><br><br>
-
-                <label for="add-amount">Add Savings: $</label>
-                <input type="number" class="addsavings" id="addsavings"
-                    name="addsavings" min=1 required>
-
-                <br><br><br>
-
-                <button type="submit">Update</button>
-
-                <br><br><br>
-
-                <label for="progress">Goal Completion:</label>
-                <progress class="completionbar" id="completionbar" value="0"
-                    max="100"></progress>
-
-                <br><br><br>
-
-            </form>
-
-        </div>
-
-    </body>
-
-=======
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url('background.jpg');">
+<body style="background-image: url('../images/background.jpg');">
 <div>
     <h1>Savings Goal Tracker</h1>
     <form>
@@ -112,5 +60,4 @@
     
 </div>
 </body>
->>>>>>> bb1ed32849e97b5ab57a5f088bb166e8080d0141
 </html>
