Organization of files

--- a/Billing/billing_calculator.html
+++ b/Billing/billing_calculator.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport"
             content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <title>Billing and Balance</title>
+        <title>Budget Calculator</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://cdn.jsdelivr.net/npm/canvas-confetti"></script>
     </head>
@@ -16,8 +16,8 @@
             <div class="nav-links">
                 <a href="../Billing/billing_calculator.html">BUDGET
                     CALCULATOR</a>
-                <a href="../User Login-Registration/register.html">SIGN UP</a>
-                <a href="../User Login-Registration/login.html">LOG IN</a>
+                <a href="../Sign Up/register.html">SIGN UP</a>
+                <a href="../Login/login.html">LOG IN</a>
             </div>
         </nav>
         <div class="budgeting">
