--- a/Login/login.html
+++ b/Login/login.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
             content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Login</title>
-        <link rel="stylesheet" href="log-reg.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <nav>
@@ -15,8 +15,8 @@
             <div class="nav-links">
                 <a href="../Billing/billing_calculator.html">BUDGET
                     CALCULATOR</a>
-                <a href="../User Login-Registration/register.html">SIGN UP</a>
-                <a href="../User Login-Registration/login.html">LOG IN</a>
+                    <a href="../Sign Up/register.html">SIGN UP</a>
+                    <a href="../Login/login.html">LOG IN</a>
             </div>
         </nav>
         <div>
@@ -41,7 +41,7 @@
                             required>
                         <label for="psw">Password</label>
                         <p>Don't have an account yet?&#160<a
-                                href="../User Login-Registration/register.html"
+                                href="../Sign Up/register.html"
                                 class="register-acc">Click here to register
                                 now!</a></p>
                         <button class="login-button" type="submit">Sign
