--- a/Sign Up/register.html
+++ b/Sign Up/register.html
@@ -12,7 +12,7 @@
             <h1>FUNI</h1><img src="../images/IMG_0049.jpg" alt="FUNI logo">
         </a>
         <div class="nav-links">
-            <a href="../Billing/billing_calculator.html">BUDGET
+            <a href="../Billing/budget_calc.html">BUDGET
                 CALCULATOR</a>
             <a href="../Sign Up/register.html">SIGN UP</a>
             <a href="../Login/login.html">LOG IN</a>
