--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -6,8 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, 
-                   initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+				initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Dynamic Calendar</title>
 </head>
 
@@ -15,32 +15,8 @@
     <!-- Main wrapper for the calendar application -->
     <div class="wrapper">
         <div class="container-calendar">
-            <div id="left">
-                <h1>Dynamic Calendar</h1>
-                <div id="event-section">
-                    <h3>Add Event</h3>
-                    <input type="date" id="eventDate">
-                    <input type="text" id="eventTitle" placeholder="Event Title">
-                    <input type="text" id="eventDescription" placeholder="Event Description">
-                    <button id="addEvent" onclick="addEvent()">
-                        Add
-                    </button>
-                </div>
-                <div id="reminder-section">
-                    <h3>Reminders</h3>
-                    <!-- List to display reminders -->
-                    <ul id="reminderList">
-                        <li data-event-id="1">
-                            <strong>Event Title</strong>
-                            - Event Description on Event Date
-                            <button class="delete-event" onclick="deleteEvent(1)">
-                                Delete
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div id="right">
+            <div id="top">
+                <h1>Reminder Calendar</h1>
                 <h3 id="monthAndYear"></h3>
                 <div class="button-container-calendar">
                     <button id="previous" onclick="previous()">
@@ -74,6 +50,30 @@
                     </select>
                     <!-- Dropdown to select a specific year -->
                     <select id="year" onchange="jump()"></select>
+                </div>
+            </div>
+            <div id="bottom">
+                <div id="event-section">
+                    <h3>Add Event</h3>
+                    <input type="date" id="eventDate">
+                    <input type="text" id="eventTitle" placeholder="Event Title">
+                    <input type="text" id="eventDescription" placeholder="Event Description">
+                    <button id="addEvent" onclick="addEvent()">
+                        Add
+                    </button>
+                </div>
+                <div id="reminder-section">
+                    <h3>Reminders</h3>
+                    <!-- List to display reminders -->
+                    <ul id="reminderList">
+                        <li data-event-id="1">
+                            <strong>Event Title</strong>
+                            - Event Description on Event Date
+                            <button class="delete-event" onclick="deleteEvent(1)">
+                                Delete
+                            </button>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
