--- a/Salary Calc/salary_calc.html
+++ b/Salary Calc/salary_calc.html
@@ -6,87 +6,117 @@
         <title>Salary and Hourly Wage Calculator</title>
         <link rel="stylesheet" href="salary_calc.css">
         <script src="calculator.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/canvas-confetti"></script>
     </head>
     <body>
-        <h1>Salary and Hourly Wage Calculator</h1>
-        <form id="wageForm">
-            <label for="incomeType">Select Income Type:</label>
-            <select id="incomeType">
-                <option value="salary">Salary</option>
-                <option value="hourly">Hourly Wage</option>
-            </select><br><br>
-
-            <label for="incomeAmount">Enter Amount ($):</label>
-            <input type="number" id="incomeAmount" required><br><br>
-
-            <label for="hoursPerWeek" style="display:none;">Hours per
-                Week:</label>
-            <input type="number" id="hoursPerWeek"
-                style="display:none;"><br><br>
-
-            <label for="state">Select State:</label>
-            <select id="state">
-                <option value="0">Alabama</option>
-                <option value="0.02">Alaska</option>
-                <option value="0.035">Arizona</option>
-                <option value="0.055">Arkansas</option>
-                <option value="0.06">California</option>
-                <option value="0.0463">Colorado</option>
-                <option value="0.05">Connecticut</option>
-                <option value="0">Delaware</option>
-                <option value="0">Florida</option>
-                <option value="0.0575">Georgia</option>
-                <option value="0.04">Hawaii</option>
-                <option value="0.075">Idaho</option>
-                <option value="0.0495">Illinois</option>
-                <option value="0.0323">Indiana</option>
-                <option value="0.0898">Iowa</option>
-                <option value="0.0525">Kansas</option>
-                <option value="0.05">Kentucky</option>
-                <option value="0.04">Louisiana</option>
-                <option value="0.0715">Maine</option>
-                <option value="0">Maryland</option>
-                <option value="0.051">Massachusetts</option>
-                <option value="0.0425">Michigan</option>
-                <option value="0.0765">Minnesota</option>
-                <option value="0.05">Mississippi</option>
-                <option value="0.054">Missouri</option>
-                <option value="0.0689">Montana</option>
-                <option value="0.0684">Nebraska</option>
-                <option value="0">Nevada</option>
-                <option value="0.05">New Hampshire</option>
-                <option value="0.055">New Jersey</option>
-                <option value="0.0485">New Mexico</option>
-                <option value="0.065">New York</option>
-                <option value="0.0575">North Carolina</option>
-                <option value="0.0175">North Dakota</option>
-                <option value="0">Ohio</option>
-                <option value="0.05">Oklahoma</option>
-                <option value="0.099">Oregon</option>
-                <option value="0.0307">Pennsylvania</option>
-                <option value="0">Rhode Island</option>
-                <option value="0.07">South Carolina</option>
-                <option value="0">South Dakota</option>
-                <option value="0.06">Tennessee</option>
-                <option value="0">Texas</option>
-                <option value="0.05">Utah</option>
-                <option value="0.035">Vermont</option>
-                <option value="0.0575">Virginia</option>
-                <option value="0">Washington</option>
-                <option value="0.065">West Virginia</option>
-                <option value="0.0765">Wisconsin</option>
-                <option value="0">Wyoming</option>
-            </select><br><br>
-
-            <button type="button" onclick="calculateNetIncome()">Calculate Net
-                Income</button>
-        </form>
-        <h2>Yearly Income After Taxes: $<span id="netIncome">0.00</span></h2>
-        <h2>Yearly Net Income Before Taxes: $<span
-                id="yearlyIncomeBeforeTaxes">0.00</span></h2>
-        <h2>Weekly Income Before Taxes: $<span
-                id="weeklyIncomeBeforeTaxes">0.00</span></h2>
-        <h2>Weekly Income After Taxes: $<span
-                id="weeklyIncomeAfterTaxes">0.00</span></h2>
+        <nav>
+            <a href="../HomePage/index.html" id="FUNI-logo">
+                <h1>FUNI</h1><img src="../images/IMG_0049.jpg" alt="FUNI logo">
+            </a>
+            <div class="nav-links">
+                <a href="../Billing/budget_calc.html">BUDGET
+                    CALCULATOR</a>
+                <a href="../Loan Calc/loan_calc.html">LOAN CALCULATOR</a>
+                <a href="../Sign Up/register.html">SIGN UP</a>
+                <a href="../Login/login.html">LOG IN</a>
+            </div>
+        </nav>
+        <div class="salary-container">
+            <h2 class="fade-in">SALARY CALCULATOR</h2>
+            <div class="form-container">
+                <form id="wageForm">
+                    <div class="input-background">
+                        <div>
+                            <label for="incomeType">Select Income Type:</label>
+                            <select id="incomeType">
+                                <option value="salary">Salary</option>
+                                <option value="hourly">Hourly Wage</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label for="incomeAmount">Enter Amount ($):</label>
+                            <input type="number" id="incomeAmount" required>
+                        </div>
+                        <div id="hoursPerWeekContainer" class="hidden">
+                            <label for="hoursPerWeek">Hours per Week:</label>
+                            <input type="number" id="hoursPerWeek">
+                        </div>
+                        <div>
+                            <label for="state">Select State:</label>
+                            <select id="state">
+                                <option value="0">Alabama</option>
+                                <option value="0.02">Alaska</option>
+                                <option value="0.035">Arizona</option>
+                                <option value="0.055">Arkansas</option>
+                                <option value="0.06">California</option>
+                                <option value="0.0463">Colorado</option>
+                                <option value="0.05">Connecticut</option>
+                                <option value="0">Delaware</option>
+                                <option value="0">Florida</option>
+                                <option value="0.0575">Georgia</option>
+                                <option value="0.04">Hawaii</option>
+                                <option value="0.075">Idaho</option>
+                                <option value="0.0495">Illinois</option>
+                                <option value="0.0323">Indiana</option>
+                                <option value="0.0898">Iowa</option>
+                                <option value="0.0525">Kansas</option>
+                                <option value="0.05">Kentucky</option>
+                                <option value="0.04">Louisiana</option>
+                                <option value="0.0715">Maine</option>
+                                <option value="0">Maryland</option>
+                                <option value="0.051">Massachusetts</option>
+                                <option value="0.0425">Michigan</option>
+                                <option value="0.0765">Minnesota</option>
+                                <option value="0.05">Mississippi</option>
+                                <option value="0.054">Missouri</option>
+                                <option value="0.0689">Montana</option>
+                                <option value="0.0684">Nebraska</option>
+                                <option value="0">Nevada</option>
+                                <option value="0.05">New Hampshire</option>
+                                <option value="0.055">New Jersey</option>
+                                <option value="0.0485">New Mexico</option>
+                                <option value="0.065">New York</option>
+                                <option value="0.0575">North Carolina</option>
+                                <option value="0.0175">North Dakota</option>
+                                <option value="0">Ohio</option>
+                                <option value="0.05">Oklahoma</option>
+                                <option value="0.099">Oregon</option>
+                                <option value="0.0307">Pennsylvania</option>
+                                <option value="0">Rhode Island</option>
+                                <option value="0.07">South Carolina</option>
+                                <option value="0">South Dakota</option>
+                                <option value="0.06">Tennessee</option>
+                                <option value="0">Texas</option>
+                                <option value="0.05">Utah</option>
+                                <option value="0.035">Vermont</option>
+                                <option value="0.0575">Virginia</option>
+                                <option value="0">Washington</option>
+                                <option value="0.065">West Virginia</option>
+                                <option value="0.0765">Wisconsin</option>
+                                <option value="0">Wyoming</option>
+                            </select>
+                        </div>
+                        <div>
+                            <button type="button"
+                                onclick="calculateNetIncome()">Calculate
+                                Net Income</button>
+                        </div>
+                    </div>
+                </form>
+                <div class="results-container">
+                    <h2>RESULTS</h2>
+                    <div class="text-container">
+                        <h3>Yearly Income After Taxes: $<span
+                                id="netIncome">0.00</span></h3>
+                        <h3>Yearly Net Income Before Taxes: $<span
+                                id="yearlyIncomeBeforeTaxes">0.00</span></h3>
+                        <h3>Weekly Income Before Taxes: $<span
+                                id="weeklyIncomeBeforeTaxes">0.00</span></h3>
+                        <h3>Weekly Income After Taxes: $<span
+                                id="weeklyIncomeAfterTaxes">0.00</span></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
