--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -12,6 +12,31 @@
 </head>
 
 <body>
+    <nav>
+        <a href="../HomePage/home.html" id="FUNI-logo"><h1>FUNI</h1><img
+                src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+        <ul>
+            <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
+            <li><a href="../GoalTracker/goal.html">GOAL TRACKER</a></li>
+            <li class="dropdown">CALCULATORS
+                <div class="dropdown-content">
+                    <a href="../Billing/budget_calc.html">BUDGET
+                        CALCULATOR</a>
+                    <a href="../Salary Calc/salary_calc.html">SALARY
+                        CALCULATOR</a>
+                    <a href="../Loan Calc/loan_calc.html">LOAN
+                        CALCULATOR</a>
+                </div>
+            </li>
+            <li class="dropdown">USERNAME
+                <div class="dropdown-content">
+                    <a href="#">EDIT PROFILE</a>
+                    <a href="#">OPTIONS</a>
+                    <button id="signOut">LOGOUT</button>
+                </div>
+            </li>
+        </ul>
+    </nav>
     <!-- Main wrapper for the calendar application -->
     <div class="wrapper">
         <div class="container-calendar">
