--- a/GoalTracker/goal.html
+++ b/GoalTracker/goal.html
@@ -1,41 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="container">
-    <h1>Savings Goal Tracker</h1>
-    <form>
-        <div class="form-group">
-            <label for="goal-amount">Current Goal: $</label>
-            <input type="number" class="currentgoal" id="currentgoal" name="currentgoal" step="0.01" required>
-        </div>
-        <div class="form-group">
-            <label for="current-amount">Current Savings: $</label>
-            <input type="number" class="currentsavings" id="currentsavings" name="currentsavings" step="0.01" required>
-        </div>
-        <div class="form-group">
-            <label for="add-amount">Add Savings: $</label>
-            <input type="number" class="addsavings" id="addsavings" name="addsavings" step="0.01" required>
-        </div>
-        <div class="submit-button">
-            <button class="sub-button" type="submit">Update</button>
-        </div>
-        <div class="form-group">
-            <label for="progress">Goal Completion:</label>
-            <progress class="completionbar" id="completionbar" value="0" max="100"></progress>
-        </div>
-        <div class="completed-goals">
-            <h2>Completed Goals:</h2>
-            <ul class="completed-goals-list">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tracker</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <nav>
+            <a href="../HomePage/home.html" id="FUNI-logo"><h1>FUNI</h1><img
+                    src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+            <ul>
+                <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
+                <li><a href="../GoalTracker/goal.html">GOAL TRACKER</a></li>
+                <li class="dropdown">CALCULATORS
+                    <div class="dropdown-content">
+                        <a href="../Billing/budget_calc.html">BUDGET
+                            CALCULATOR</a>
+                        <a href="../Salary Calc/salary_calc.html">SALARY
+                            CALCULATOR</a>
+                        <a href="../Loan Calc/loan_calc.html">LOAN
+                            CALCULATOR</a>
+                    </div>
+                </li>
+                <li class="dropdown">USERNAME
+                    <div class="dropdown-content">
+                        <a href="#">EDIT PROFILE</a>
+                        <a href="#">OPTIONS</a>
+                        <button id="signOut">LOGOUT</button>
+                    </div>
+                </li>
             </ul>
-        </div>
-    </form>
-    <script>
+        </nav>
+        <div class="container">
+            <h1>Savings Goal Tracker</h1>
+            <form>
+                <div class="form-group">
+                    <label for="goal-amount">Current Goal: $</label>
+                    <input type="number" class="currentgoal" id="currentgoal"
+                        name="currentgoal" step="0.01" required>
+                </div>
+                <div class="form-group">
+                    <label for="current-amount">Current Savings: $</label>
+                    <input type="number" class="currentsavings"
+                        id="currentsavings" name="currentsavings" step="0.01"
+                        required>
+                </div>
+                <div class="form-group">
+                    <label for="add-amount">Add Savings: $</label>
+                    <input type="number" class="addsavings" id="addsavings"
+                        name="addsavings" step="0.01" required>
+                </div>
+                <div class="submit-button">
+                    <button class="sub-button" type="submit">Update</button>
+                </div>
+                <div class="form-group">
+                    <label for="progress">Goal Completion:</label>
+                    <progress class="completionbar" id="completionbar" value="0"
+                        max="100"></progress>
+                </div>
+                <div class="completed-goals">
+                    <h2>Completed Goals:</h2>
+                    <ul class="completed-goals-list">
+                    </ul>
+                </div>
+            </form>
+            <script>
 
         const form = document.querySelector('form');
         const currentgoal = document.querySelector('.currentgoal');
@@ -70,7 +100,7 @@
         });
 
     </script>
-    
-</div>
-</body>
+
+        </div>
+    </body>
 </html>
