--- a/HomePage/home.html
+++ b/HomePage/home.html
@@ -12,11 +12,22 @@
     <nav>
         <a href="../HomePage/home.html" id="FUNI-logo"><h1>FUNI</h1><img
                 src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
-        <div class="nav-links">
-            <a href="../User Login-Registration/register.html">Sign Up</a>
-            <a href="../User Login-Registration/login.html">Log
-                In</a>
-        </div>
+        <ul>
+            <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
+            <li><a href="../GoalTracker/goal.html">GOAL TRACKER</a></li>
+            <li class="dropdown">CALCULATORS
+                <div class="dropdown-content">
+                    <a href="../Billing/budget_calc.html">BUDGET
+                        CALCULATOR</a>
+                    <a href="../Salary Calc/salary_calc.html">SALARY
+                        CALCULATOR</a>
+                    <a href="../Loan Calc/loan_calc.html">LOAN
+                        CALCULATOR</a>
+                </div>
+            </li>
+            <li><a href="../Login/login.html">LOGIN</a></li>
+            <li><a href="../Sign Up/register.html">SIGN UP</a></li>
+        </ul>
     </nav>
     <div class="home-page">
     <div class="slideshow-container">
