--- a/Login/login.html
+++ b/Login/login.html
@@ -9,15 +9,24 @@
     </head>
     <body>
         <nav>
-            <a href="../HomePage/index.html" id="FUNI-logo">
-                <h1>FUNI</h1><img src="../images/IMG_0049.jpg" alt="FUNI logo">
-            </a>
-            <div class="nav-links">
-                <a href="../Billing/budget_calc.html">BUDGET
-                    CALCULATOR</a>
-                    <a href="../Sign Up/register.html">SIGN UP</a>
-                    <a href="../Login/login.html">LOG IN</a>
-            </div>
+            <a href="../HomePage/home.html" id="FUNI-logo"><h1>FUNI</h1><img
+                    src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+            <ul>
+                <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
+                <li><a href="../GoalTracker/goal.html">GOAL TRACKER</a></li>
+                <li class="dropdown">CALCULATORS
+                    <div class="dropdown-content">
+                        <a href="../Billing/budget_calc.html">BUDGET
+                            CALCULATOR</a>
+                        <a href="../Salary Calc/salary_calc.html">SALARY
+                            CALCULATOR</a>
+                        <a href="../Loan Calc/loan_calc.html">LOAN
+                            CALCULATOR</a>
+                    </div>
+                </li>
+                <li><a href="../Login/login.html">LOGIN</a></li>
+                <li><a href="../Sign Up/register.html">SIGN UP</a></li>
+            </ul>
         </nav>
         <div>
             <form autocomplete="off" action="action.php" method="post"
