--- a/Sign Up/register.html
+++ b/Sign Up/register.html
@@ -1,57 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <nav>
-        <a href="../HomePage/index.html" id="FUNI-logo">
-            <h1>FUNI</h1><img src="../images/IMG_0049.jpg" alt="FUNI logo">
-        </a>
-        <div class="nav-links">
-            <a href="../Billing/budget_calc.html">BUDGET
-                CALCULATOR</a>
-            <a href="../Sign Up/register.html">SIGN UP</a>
-            <a href="../Login/login.html">LOG IN</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <title>Sign Up</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <nav>
+            <a href="../HomePage/home.html" id="FUNI-logo"><h1>FUNI</h1><img
+                    src="../images/IMG_0049.jpg" alt="FUNI logo"></a>
+            <ul>
+                <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
+                <li><a href="../GoalTracker/goal.html">GOAL TRACKER</a></li>
+                <li class="dropdown">CALCULATORS
+                    <div class="dropdown-content">
+                        <a href="../Billing/budget_calc.html">BUDGET
+                            CALCULATOR</a>
+                        <a href="../Salary Calc/salary_calc.html">SALARY
+                            CALCULATOR</a>
+                        <a href="../Loan Calc/loan_calc.html">LOAN
+                            CALCULATOR</a>
+                    </div>
+                </li>
+                <li><a href="../Login/login.html">LOGIN</a></li>
+                <li><a href="../Sign Up/register.html">SIGN UP</a></li>
+            </ul>
+        </nav>
+        <div>
+            <form autocomplete="off" action="action.php" method="post"
+                id="registration-form">
+                <div class="registration-signup">
+                    <h2>Create an account</h2>
+                    <div class="username-signup">
+                        <input type="text" placeholder="ex. (Johndoe)"
+                            id="username"
+                            name="username" minlength="8"
+                            pattern="^(?=.*[A-Z])(?!.*\s).*$"
+                            title="Username must have at least one uppercase letter, and no spaces."
+                            spellcheck="false"
+                            required>
+                        <label for="username">Username</label>
+                    </div>
+                    <div class="email">
+                        <input type="email"
+                            placeholder="ex. (JohnDoe@gmail.com)"
+                            name="email" required>
+                        <label for="Email">Email</label>
+                    </div>
+                    <div class="password-signup">
+                        <input type="password" placeholder="(ex. 'Brownfox1')"
+                            id="password"
+                            name="psw" minlength="8" maxlength="24"
+                            pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).{8,24}$"
+                            title="Password must be between 8-24 characters, containing at least one uppercase letter, one number, and no spaces."
+                            required>
+                        <label for="psw">Password</label>
+                    </div>
+                    <p>Have an account?&#160<a
+                            href="../Login/login.html"
+                            class="login-acc">Click here to sign in!</a></p>
+                    <button class="signup-button"
+                        type="submit">Register</button>
+                </div>
+            </form>
         </div>
-    </nav>
-    <div>
-        <form autocomplete="off" action="action.php" method="post" id="registration-form">
-            <div class="registration-signup">
-                <h2>Create an account</h2>
-                <div class="username-signup">
-                    <input type="text" placeholder="ex. (Johndoe)" id="username"
-                        name="username" minlength="8"
-                        pattern="^(?=.*[A-Z])(?!.*\s).*$"
-                        title="Username must have at least one uppercase letter, and no spaces."
-                        spellcheck="false"
-                        required>
-                    <label for="username">Username</label>
-                </div>
-                <div class="email">
-                    <input type="email" placeholder="ex. (JohnDoe@gmail.com)"
-                        name="email" required>
-                    <label for="Email">Email</label>
-                </div>
-                <div class="password-signup">
-                    <input type="password" placeholder="(ex. 'Brownfox1')" id="password"
-                        name="psw" minlength="8" maxlength="24"
-                        pattern="^(?=.*[A-Z])(?=.*\d)(?!.*\s).{8,24}$"
-                        title="Password must be between 8-24 characters, containing at least one uppercase letter, one number, and no spaces."
-                        required>
-                    <label for="psw">Password</label>
-                </div>
-                <p>Have an account?&#160<a
-                    href="../Login/login.html"
-                    class="login-acc">Click here to sign in!</a></p>
-                <button class="signup-button" type="submit">Register</button>
-            </div>
-        </form>
-    </div>
-    <script>
+        <script>
         document.addEventListener('DOMContentLoaded', function () {
             var fadeElems = document.querySelectorAll('.registration-signup');
         
@@ -72,5 +87,5 @@
             window.addEventListener('scroll', checkFade);
         });
     </script>
-</body>
+    </body>
 </html>
