Variable name modifcations

--- a/Billing/budget_calc.html
+++ b/Billing/budget_calc.html
@@ -29,7 +29,7 @@
                     <div class="dropdown-content">
                         <a href="#">EDIT PROFILE</a>
                         <a href="#">OPTIONS</a>
-                        <button id="signOut">LOGOUT</button>
+                        <a href="#">LOGOUT</a>
                     </div>
                 </li>
             </ul>
