--- a/HomePage/home.html
+++ b/HomePage/home.html
@@ -25,8 +25,13 @@
                         CALCULATOR</a>
                 </div>
             </li>
-            <li><a href="../Login/login.html">LOGIN</a></li>
-            <li><a href="../Sign Up/register.html">SIGN UP</a></li>
+            <li class="dropdown">USERNAME
+                <div class="dropdown-content">
+                    <a href="#">EDIT PROFILE</a>
+                    <a href="#">OPTIONS</a>
+                    <a href="#">LOGOUT</a>
+                </div>
+            </li>
         </ul>
     </nav>
     <div class="home-page">
